updated repo directories
