# perfume/internal/handlers/update_handler.go
@@ -6,9 +6,8 @@ import (
 	"log"
 	"net/http"
 
-	"github.com/zemld/PerfumeRecommendationSystem/perfume/db/core"
-	"github.com/zemld/PerfumeRecommendationSystem/perfume/handlers/util"
-	"github.com/zemld/PerfumeRecommendationSystem/perfume/models"
+	"github.com/zemld/PerfumeRecommendationSystem/perfume/internal/db/core"
+	"github.com/zemld/PerfumeRecommendationSystem/perfume/internal/models"
 )
 
 // @description Update database state about perfumes. Can truncate table
@@ -17,10 +16,10 @@ import (
 // @accept json
 // @param hard query boolean false "Is hard update"
 // @param password query string false "Password for hard update"
-// @param perfumes body util.PerfumeCollection true "List of perfumes to update"
-// @success 200 {object} util.UpdateResponse "Update successful"
-// @failure 400 {object} util.UpdateResponse "Wrong perfumes format"
-// @failure 500 {object} util.UpdateResponse "Something went wrong while update perfumes state"
+// @param perfumes body PerfumeCollection true "List of perfumes to update"
+// @success 200 {object} UpdateResponse "Update successful"
+// @failure 400 {object} UpdateResponse "Wrong perfumes format"
+// @failure 500 {object} UpdateResponse "Something went wrong while update perfumes state"
 // @router /update [post]
 func UpdateHandler(w http.ResponseWriter, r *http.Request) {
 	p := getUpdateParametersFromRequest(r)
@@ -31,10 +30,10 @@ func UpdateHandler(w http.ResponseWriter, r *http.Request) {
 	}
 	updateStatus := core.Update(p, perfumes)
 	if !updateStatus.State.Success {
-		util.WriteResponse(w, http.StatusInternalServerError, updateStatus)
+		WriteResponse(w, http.StatusInternalServerError, updateStatus)
 		return
 	}
-	util.WriteResponse(w, http.StatusOK, updateStatus)
+	WriteResponse(w, http.StatusOK, updateStatus)
 }
 
 func getPerfumesToUpdate(r *http.Request) ([]models.Perfume, error) {
@@ -44,7 +43,7 @@ func getPerfumesToUpdate(r *http.Request) ([]models.Perfume, error) {
 		log.Printf("Error reading request body: %v\n", err)
 		return nil, err
 	}
-	var perfumes util.PerfumeCollection
+	var perfumes PerfumeCollection
 	if err = json.Unmarshal(content, &perfumes); err != nil {
 		log.Printf("Error unmarshalling request body: %v\n", err)
 		return nil, err
